# eapp

./: README.md  pyproject.toml
core/: config.py
database/: session.py
productos/: models.py
